[package]
name = "reflink_replacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.5.1", features = ["alloc"] }
clap = { version = "3.2.12", features = ["derive"] }
glob = "0.3.0"
sha2 = "0.10.2"
